Scalability test (#20)
* terasort

simple validation

use 8 bytes to decide partition

try to achieve global ordering

test

fix key

stylistic fix

sync

compilable framework

refactor the execution engine

delete data perf

fix type issue

fix schema issue

test

test

test

log

fix waitforfinish issue

sync

framework

fix

fix

fix

fix

fix

fix

test

test

test

make benchmarkable all serializable

get rid of scalalogging

remove useless statements

stylistic fixes

* unit test framework (#8)

* Scalability test (#10)

* scalability test

* unit tests for configuration

* fix sparkcontext

* fix sparkcontext

* merge

* scalability test

* unit tests for configuration

* Added new TeraSort and TeraGen tests

* test fix for TeraGen and TeraSort

* minor fix

* unit test framework

* scalability test

* Code review comments

* cleanup code

* Fix output path of TeraGen as input path of TeraSort

* Code review comments

* Removed TeraGen from the CoreBenchmark suite and made it a standalone data generator

* Test submitter (#16)

* update job.json

* update job json

* test_submitter

* fix typo

* start client

* fix order

* add step logging

* fix typo in YarnConfiguration

* add dependency to hadoop-common

* add logging

* check configuration

* check configuration

* test

* init commit for application master

* init commit for application master

* finish app

* fix compilation issue

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* shit

* test

* test

* test

* test

* change jar dir

* test

* test

