@@ -12,7 +12,7 @@ val sparkVersion = "2.1.0"
 libraryDependencies ++= Seq("org.slf4j" % "slf4j-api" % "1.7.5",
   "com.github.scopt" %% "scopt" % "3.3.0",
   "com.twitter" %% "util-jvm" % "6.23.0" % "provided",
-  "org.scalatest" %% "scalatest" % "2.2.1" % "test",
+  "org.scalatest" %% "scalatest" % "3.2.0-SNAP5" % "test",
   "org.yaml" % "snakeyaml" % "1.17",
   "com.typesafe.scala-logging" %% "scala-logging-slf4j" % "2.1.2",
   "org.scalatest" % "scalatest_2.11" % "3.0.1",
@@ -20,11 +20,19 @@ libraryDependencies ++= Seq("org.slf4j" % "slf4j-api" % "1.7.5",
   "org.apache.spark" % "spark-sql_2.11" % s"$sparkVersion",
   "org.apache.spark" % "spark-mllib_2.11" % s"$sparkVersion",
   "org.apache.spark" % "spark-hive_2.11" % s"$sparkVersion",
-  "net.java.dev.jets3t" % "jets3t" % "0.9.4",
-  "org.apache.hadoop" % "hadoop-aws" % "2.7.3",
-  "com.amazonaws" % "aws-java-sdk-s3" % "1.11.95")
+  "org.apache.hadoop" % "hadoop-yarn-api" % "2.7.3",
+  "org.apache.hadoop" % "hadoop-common" % "2.7.3",
+  "com.typesafe" % "config" % "1.3.1")
+
+parallelExecution in Test := false
+
+test in assembly := {}
 
 fork := true
+
+javaOptions in Test ++= Seq("-Xmx4096m", "-XX:ReservedCodeCacheSize=384m", "-XX:MaxPermSize=384m")
+
+concurrentRestrictions in Global := Seq(Tags.limitAll(1))
 
 licenses += ("Apache-2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))
 
